--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.29MB/s(Youtube:不良林), server: 5.183.176.92, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-4.32MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-227.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-7.96MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.27MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
-  - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇨🇳 中国-679.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-513.9KB/s(Youtube:不良林), server: 5.183.176.93, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-612.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-227.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.22MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林), server: v1.tgfaka.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.tgfaka.com}}
+  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: us3.lolvps.xyz, port: 60072, type: vmess, uuid: 08c2809f-0094-42c9-b04a-c19d06a1d898, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /G0DXUQOM, ws-headers: {Host: us3.lolvps.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 48443, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
+  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-2.28MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-1.66MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-679.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-679.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-679.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-679.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-679.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-679.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-679.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-513.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-612.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
