--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-7.96MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-227.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.22MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林), server: v1.tgfaka.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.tgfaka.com}}
+  - {name: 🇭🇰 香港-2.66MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
+  - {name: 🇨🇳 中国-7.88MB/s(Youtube:不良林), server: 116.129.253.134, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇨🇳 台湾-8.90MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: us3.lolvps.xyz, port: 60072, type: vmess, uuid: 08c2809f-0094-42c9-b04a-c19d06a1d898, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /G0DXUQOM, ws-headers: {Host: us3.lolvps.xyz}}
   - {name: 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林), server: v2.tgfaka.com, port: 48443, type: vmess, uuid: 6f48efb9-3817-4652-832f-fd04d93ebbc1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.tgfaka.com}}
   - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
@@ -66,18 +66,19 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.90MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
@@ -88,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
@@ -104,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
@@ -129,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-7.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-227.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-821.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.90MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
